--- a/ScreenMusic.WebMvc/Views/Authentication/Login.cshtml
+++ b/ScreenMusic.WebMvc/Views/Authentication/Login.cshtml
@@ -1,6 +1,12 @@
 ﻿@using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor HttpContextAccessor
 
+@{
+    ViewData["Title"] = "Login";
+    var email = ViewData["Email"] as string;
+    var password = ViewData["Password"] as string;
+}
+
 <div class="container mt-5">
     @if (HttpContextAccessor.HttpContext!.User.Identity!.IsAuthenticated)
     {
@@ -17,25 +23,32 @@
         <div class="container mt-2 text-black">
             <div class="row justify-content-center">
                 <div class="col-md-6">
-                    @if (!string.IsNullOrEmpty(ViewData["ErrorMessage"] as string))
+                    @if (TempData["ErrorMessage"] != null)
                     {
                         <div class="alert alert-danger" role="alert">
-                            @ViewData["ErrorMessage"]
+                            <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
+                            @TempData["ErrorMessage"]
                         </div>
                     }
+
                     <div class="card shadow">
                         <div class="card-header text-white" style="background-color: #9820b0;">
                             <h4>Login</h4>
                         </div>
                         <div class="card-body">
-                            <form asp-action="Login" method="post" class="p-4 rounded bg-light">                                
+                            <form asp-action="Login" method="post" class="p-4 rounded bg-light">
                                 <div class="form-group mb-3">
                                     <label for="Email">Email</label>
-                                    <input type="email" name="Email" class="form-control" required placeholder="Digite seu email" />
+                                    <input type="email" name="Email" class="form-control" required placeholder="Digite seu email" value="@email" />
                                 </div>
-                                <div class="form-group mb-3">
+                                <div class="form-outline mb-4">
                                     <label for="Password">Senha</label>
-                                    <input type="password" name="Password" class="form-control" required placeholder="Digite sua senha" />
+                                    <div class="input-group">
+                                        <input type="password" name="Password" class="form-control" required id="password" placeholder="Digite sua senha" value="@password" />
+                                        <button class="btn btn-outline-secondary" type="button" id="showHidePassword">
+                                            <i class="fa fa-eye-slash" aria-hidden="true"></i>
+                                        </button>
+                                    </div>
                                 </div>
                                 <div class="form-group text-center mb-0">
                                     <button type="submit" class="btn btn-block w-100 text-white" style="background-color: #9820b0;">Login</button>
