--- a/ScreenMusic.WebMvc/Views/MusicGenre/Create.cshtml
+++ b/ScreenMusic.WebMvc/Views/MusicGenre/Create.cshtml
@@ -1,19 +1,17 @@
-﻿@{
-    if (TempData["ErrorMessage"] != null)
-    {
-        <div class="alert alert-danger alert-dismissible fade show" role="alert">
-            @TempData["ErrorMessage"]
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-    }
-}
-
-@model InputCreateMusicGenre
+﻿@model InputCreateMusicGenre
 @{
     ViewData["Title"] = "Cadastro do Gênero Musical";
 }
 
 <div class="container mt-5">
+    @if (TempData["ErrorMessage"] != null)
+    {
+        <div class="alert alert-danger" role="alert">
+            <button type="button" class="btn btn-danger btn-sm close-alert" data-bs-dismiss="alert" aria-label="Close">X</button>
+            @TempData["ErrorMessage"]
+        </div>
+    }
+
     <div class="d-flex justify-content-between align-items-center mb-4">
         <a class="btn btn-info d-flex align-items-center btn-icon" asp-action="Index" asp-controller="MusicGenre">
             <i class="fas fa-arrow-left"></i>
