--- a/ScreenMusic.Web/Pages/Login.razor
+++ b/ScreenMusic.Web/Pages/Login.razor
@@ -5,12 +5,8 @@
 @attribute [AllowAnonymous]
 
 <MudPaper Class="px-8 pt-2 pb-4 mx-16 my-8" Justify="Justify.Center">
-    @if (!string.IsNullOrEmpty(errorMessage))
-    {
-        <MudAlert Severity="Severity.Error">
-            @errorMessage
-        </MudAlert>
-    }
+    <ErrorAlert ErrorMessage="@errorMessage" />
+
     <AuthorizeView>
         <Authorized>
             <p>Você está conectado como @context.User.Identity!.Name </p>
