--- a/ScreenMusic.Web/Pages/CreateMusicGenre.razor
+++ b/ScreenMusic.Web/Pages/CreateMusicGenre.razor
@@ -7,12 +7,7 @@
 
     <MudText Class="mt-8" Typo="Typo.h4">Cadastro do Gênero Musical</MudText>
 
-    @if (!string.IsNullOrEmpty(errorMessage))
-    {
-        <MudAlert Severity="Severity.Error">
-            @errorMessage
-        </MudAlert>
-    }
+    <ErrorAlert ErrorMessage="@errorMessage" />
 
     <MudForm>
         <MudTextField Class="mt-4" T="string" Placeholder="Nome do Gênero Musical" Variant="Variant.Outlined" @bind-Value="name" Required="true" RequiredError="Campo obrigatório." />
