--- a/ScreenMusic.Web/Components/CardArtist.razor
+++ b/ScreenMusic.Web/Components/CardArtist.razor
@@ -1,19 +1,16 @@
 ﻿@using ScreenMusic.Arguments
-﻿<MudCard Style="width: 220px; height: 450px; overflow:hidden;">
+
+<MudCard Style="width: 220px; height: 420px; overflow:hidden;">
     <MudCardMedia Style="width: 220px; height: 220px;" Image="@Image"></MudCardMedia>
-    <MudCardHeader>
-        <CardHeaderContent>
-            <MudText Typo="Typo.h6">@Artist!.Name</MudText>
-        </CardHeaderContent>
-    </MudCardHeader>
     <MudCardContent>
-        <MudText Typo="Typo.body2" translate="yes" Style="height: 40px; overflow:hidden;">@Artist!.Biography</MudText>
-        <MudRating SelectedValue="@Convert.ToInt32(Artist!.Classification)" ReadOnly="true" Class="mt-2" />
-    </MudCardContent>
-    <MudCardActions>
-        <MudButton Color="Color.Warning" Variant="Variant.Outlined" Href=@($"/UpdateArtist/{Artist!.Name}")>Detalhes</MudButton>
-    </MudCardActions>
-</MudCard>
+        <MudText Typo="Typo.h6">@Artist!.Name</MudText>
+            <MudText Typo="Typo.body2" translate="yes" Style="height: 40px; overflow:hidden;">@Artist!.Biography</MudText>
+            <MudRating SelectedValue="@Convert.ToInt32(Artist!.Classification)" ReadOnly="true" Class="mt-2" />
+        </MudCardContent>
+        <MudCardActions>
+            <MudButton Color="Color.Warning" Variant="Variant.Outlined" Href=@($"/UpdateArtist/{Artist!.Name}")>Detalhes</MudButton>
+        </MudCardActions>
+    </MudCard>
 
 @code {
     [Parameter]
@@ -21,8 +18,16 @@
 
     public string? Image { get; set; }
 
-    protected override void OnInitialized()
+    protected override void OnParametersSet()
     {
-        Image = Artist!.ProfilePhoto!.Contains("Photo") ? $"https://localhost:7089/{Artist!.ProfilePhoto}" : "images/cardArtista.png";
+        UpdateImage();
+    }
+
+    private void UpdateImage()
+    {
+        if (Artist?.ProfilePhoto != null)
+            Image = Artist.ProfilePhoto.Contains("Photo") ? $"https://localhost:7089/{Artist.ProfilePhoto}" : "images/cardArtista.png";
+        else
+            Image = "images/cardArtista.png";
     }
 }
