--- a/ScreenMusic.Web/Pages/UpdateMusic.razor
+++ b/ScreenMusic.Web/Pages/UpdateMusic.razor
@@ -89,13 +89,13 @@
 
             var responseListArtist = await artistServiceClient.GetAll();
             if (responseListArtist.Success)
-                ListOutputArtist = responseListArtist.Data;
+                ListOutputArtist = responseListArtist.Data?.OrderBy(x => x.Name).ToList();
             else
                 errorMessage = responseListArtist.ErrorMessage ?? "Erro ao carregar combo de artistas.";
 
             var responseListMusicGenre = await musicGenreServiceClient.GetAll();
             if (responseListMusicGenre.Success)
-                ListOutputMusicGenre = responseListMusicGenre.Data;
+                ListOutputMusicGenre = responseListMusicGenre.Data?.OrderBy(x => x.Name).ToList();
             else
                 errorMessage = responseListMusicGenre.ErrorMessage ?? "Erro ao carregar combo de gêneros musicais.";
 
